Fix: Treepicker Visual Bugs
- Selected pane was 1px too high when the alert is present.
- Safari was collapsing the tabs in the TreePicker when the list
  of nodes is long.

--- a/src/styles/adslotUi/TreePickerSelected.scss
+++ b/src/styles/adslotUi/TreePickerSelected.scss
@@ -21,7 +21,7 @@
     overflow: auto;
 
     &.is-short {
-      $alert-height: 40px;
+      $alert-height: 41px;
 
       height: $scrollable-height - $alert-height;
     }
